# agents-platform

./: .gitignore  AGENTS.md  CLAUDE.md  DEMAND_GENERATION_BATCH_PLAN.md  DIGITAL_MARKETING_BATCH_PLAN.md  LIVE_SMOKE_REQUIRED.md  MARKETING_OPERATIONS_BATCH_PLAN.md  README.md  agent-platform-playbook.md  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
agents/agent-01-blog-writer/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
agents/agent-02-content-repurposer/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
agents/agent-02-report-writer/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
agents/agent-03-content-ideation/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
agents/agent-04-seo-optimizer/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
agents/agent-05-editorial-planning/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md  RUNBOOK.md
agents/agent-06-whitepaper-development/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md  RUNBOOK.md
agents/agent-07-case-study-generation/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md  RUNBOOK.md
agents/agent-08-icp-identification/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
agents/agent-09-audience-segmentation/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
agents/agent-10-lead-generation/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
agents/agent-11-lead-scoring/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
agents/agent-12-campaign-recommendation/: AGENT_SPEC.md  DESIGN.md  Dockerfile  README.md
docs/: CYCLE-4-HARDENING.md  DEPENDENCY-MANAGEMENT.md
(+866 files in other folders)
